# donation_station

./: .eslintrc.json  .prettierc  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
program/: Xargo.toml
program/src/: lib.rs
programs/donationstation2/: Cargo.toml
programs/donationstation2/src/: lib.rs
src/: App.tsx  index.tsx
src/@types/: types.d.ts
src/components/: Card.tsx  Form.tsx  Header.tsx
src/solana/: index.ts
tests/: donation_station2.js
